--- a/ipl.html
+++ b/ipl.html
@@ -185,12 +185,12 @@
    <div class='file-container'>
         
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/stream/?video=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cricstream4u.github.io/stream/?video=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL Hindi</a></div>
+            <a href='https://cinsarena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cinearena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>IPL English</a></div>
+            <a href='https://cinearena1.github.io/jwplayer?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cinearena1.github.io/jwplayer?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>IPL English</a></div>
 <!--
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
