--- a/ipl.html
+++ b/ipl.html
@@ -185,7 +185,7 @@
    <div class='file-container'>
         
         <div class='directory-item'>
-            <a href='https://cinsarena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cinearena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
             <a href='https://cinearena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
