--- a/ipl.html
+++ b/ipl.html
@@ -185,8 +185,8 @@
    <div class='file-container'>
         
         <div class='directory-item'>
-            <a href='https://cinearena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cinearena1.github.io/jwplayer/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL Hindi</a></div>
+            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='iplhin.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cinearena1.github.io/jwplayer?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='ipleng.jpg' alt='IPL English'></a>
