--- a/ipl.html
+++ b/ipl.html
@@ -230,11 +230,11 @@
         <div class='directory-item'>
             <a href='iplhin.html'><img src='star1hd.jpg' alt='Star 1 HD'></a>
             <a href='iplhin.html'>Star Sports1 Hindi</a></div>
-        <!--
+        
         <div class='directory-item'>
-            <a href='https://cinearena.live/jwplyr?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1744190417~acl=%2f*~data=hdntl~hmac=30ee0759b03cdf4772c816cb38539d8a7aaede4e8c1e24d7951fd5cf6c4e9a7d/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'><img src='star2.jpg' alt='Star Sports 2'></a>
-            <a href='https://cinearena.live/jwplyr?file=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1744190417~acl=%2f*~data=hdntl~hmac=30ee0759b03cdf4772c816cb38539d8a7aaede4e8c1e24d7951fd5cf6c4e9a7d/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8'>Star Sports 2 Hindi</a></div>
-        -->
+            <a href='https://cricstream4u.github.io/ipl-hindi2/'><img src='star2.jpg' alt='Star Sports 2'></a>
+            <a href='https://cricstream4u.github.io/ipl-hindi2/'>Star Sports 2 Hindi</a></div>
+        
 
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='tsports.jpg' alt='tsports'></a>
