--- a/ipl.html
+++ b/ipl.html
@@ -239,8 +239,8 @@
         
 
 	    <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'><img src='tsports.jpg' alt='tsports'></a>
-            <a href='https://cricstream4u.github.io/jwplyr?file=https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17440352763600~hmac=1f17add8b1400c4ca9fd8a4d773520ffccfb59ed0aab51695eeca5ef7bb14550'>T Sports</a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/LIVE/video.m3u8'><img src='tsports.jpg' alt='tsports'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/LIVE/video.m3u8'>T Sports</a>
 	    </div>
 
       
