--- a/ipl.html
+++ b/ipl.html
@@ -189,8 +189,8 @@
             <a href='https://cricstream4u.github.io/ipl-hindi1/'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/ipl-english2//'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cricstream4u.github.io/ipl-english2/'>IPL English</a></div>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/LIVE/video.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/LIVE/video.m3u8'>IPL English</a></div>
 <!--
 	    <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://prod-ent-live-gm.jiocinema.com/bpk-tv/JS_M1_IPL25_Bhoj_IDC_MOB/Fallback/index.m3u8'><img src='iplbhojpuri.jpg' alt='Bhojpuri'></a>
