--- a/psl.html
+++ b/psl.html
@@ -185,8 +185,8 @@
     </div>
    
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr?file=https://xenolive.com/fancode/global/primary/123018_english_hls_4965ta-di/index.m3u8'><img src='fancode.jpg' alt='fancode'></a>
-            <a href='https://cricstream4u.github.io/jwplyr?file=https://xenolive.com/fancode/global/primary/123018_english_hls_4965ta-di/index.m3u8'>Fancode</a></div>
+            <a href='https://cricstream4u.github.io/fancode/'><img src='fancode.jpg' alt='fancode'></a>
+            <a href='https://cricstream4u.github.io/fancode/'>Fancode</a></div>
 	    
         <div class='directory-item'>
             <a href='ptv2.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
