--- a/ipl.html
+++ b/ipl.html
@@ -185,8 +185,8 @@
    <div class='file-container'>
         
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/ipl-hindi1/'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cricstream4u.github.io/ipl-hindi1/'>IPL Hindi</a></div>
+            <a href='https://cricstream4u.github.io/ipl-iframe/'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cricstream4u.github.io/ipl-iframe/'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://cdn.hoichoi24.com/LIVE/video.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
