--- a/psl.html
+++ b/psl.html
@@ -33,7 +33,7 @@
         </a>
         
         <a href="ptv.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="ptv.jpg" alt="PTV Sports" class="w-20 h-20 mx-auto">
+            <img src="ptv1.jpg" alt="PTV Sports" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">PTV Sports</p>
         </a>
         
