--- a/psl.html
+++ b/psl.html
@@ -54,7 +54,7 @@
 
     <!-- Footer -->
     <footer class="p-4 bg-gray-800 text-white text-center mt-8">
-        2025 Pranto Bhai. All rights reserved.
+        2025 CineArena.live All rights reserved.
     </footer>
 
     <script>
