--- a/psl.html
+++ b/psl.html
@@ -14,7 +14,7 @@
 
     <!-- Header -->
     <header class="p-4 bg-blue-900 text-white text-center text-2xl font-bold">
-        <img src="cineheader2.png" class="h-10 md:h-10 lg:h-10 mx-auto">
+        <img src="cineheader.png" class="h-10 md:h-10 lg:h-10 mx-auto">
     </header>
 
     <!-- Search & Dark Mode Toggle -->
