--- a/psl.html
+++ b/psl.html
@@ -53,7 +53,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="p-4 bg-gray-800 text-white text-center mt-8" style="position: fixed; left:0; bottom:0;">
+    <footer class="p-4 bg-gray-800 text-white text-center mt-8" style="position: fixed; left:0; bottom:0; width:100%; ">
         2025 CineArena.live All rights reserved.
     </footer>
 
