--- a/ipl.html
+++ b/ipl.html
@@ -39,17 +39,17 @@
         
         
         <a href="ipltamil.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="ipltamil.jpg" alt="Tamil" class="w-20 h-20 mx-auto">
+            <img src="tamil.jpg" alt="Tamil" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Tamil</p>
         </a>
 
 	<a href="ipltelugu.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="ipltelgu.jpg" alt="Telugu" class="w-20 h-20 mx-auto">
+            <img src="telgu.jpg" alt="Telugu" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Teugu</p>
 	</a>
 
 	<a href="star1hindi.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="star1hindi.jpg" alt="Star Sports1 Hindi" class="w-20 h-20 mx-auto">
+            <img src="star1hd.jpg" alt="Star Sports1 Hindi" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Star Sports1 Hindi</p>
 	</a>
 
