--- a/ipl.html
+++ b/ipl.html
@@ -43,9 +43,9 @@
             <p class="mt-2 font-semibold">Tamil</p>
         </a>
 
-	<a href="ipltelugu.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="ipltelgu.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="telgu.jpg" alt="Telugu" class="w-20 h-20 mx-auto">
-            <p class="mt-2 font-semibold">Teugu</p>
+            <p class="mt-2 font-semibold">Telgu</p>
 	</a>
 
 	<a href="star1hindi.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
