--- a/ipl.html
+++ b/ipl.html
@@ -48,15 +48,17 @@
             <p class="mt-2 font-semibold">Telgu</p>
 	</a>
 
-	<a href="starsports1hd.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="iplhin.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="star1hd.jpg" alt="Star Sports1 Hindi" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Star Sports1 Hindi</p>
 	</a>
 
+	<!--
 	<a href="starsports2hindi.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="star2.jpg" alt="Star Sports2 Hindi" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Star Sports2 Hindi</p>
 	</a>
+	    -->
 
 	<a href="https://cricstream4u.github.io/tsports/" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="tsports.jpg" alt="T Sports" class="w-20 h-20 mx-auto">
