--- a/ipl.html
+++ b/ipl.html
@@ -45,7 +45,7 @@
 
 	<a href="ipltelgu.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="telgu.jpg" alt="Telugu" class="w-20 h-20 mx-auto">
-            <p class="mt-2 font-semibold">Telgu</p>
+            <p class="mt-2 font-semibold">Telugu</p>
 	</a>
 
 	<a href="iplhin.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
