--- a/ipl.html
+++ b/ipl.html
@@ -69,10 +69,11 @@
         
     </div>
 
-    <!-- Footer -->
+    <!-- Footer 
     <footer class="p-4 bg-gray-800 text-white text-center mt-8" style="position: fixed; left:0; bottom:0; width:100%; ">
         2025 CineArena.live All rights reserved.
     </footer>
+	-->
 
     <script>
         // Dark Mode Toggle with Local Storage
