--- a/ipl.html
+++ b/ipl.html
@@ -9,6 +9,17 @@
     <title>CineArena.Live</title>
     <link rel="icon" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+	    .sticky-footer {
+           position: fixed;
+           bottom: 0;
+           width: 100%;
+           background: #fff;
+           color: white;
+           text-align: center;
+           padding: 0px;
+	    }
+    </style>
 </head>
 <body class="bg-gray-100 text-gray-900 transition-all">
 
