--- a/ipl.html
+++ b/ipl.html
@@ -70,6 +70,20 @@
             <p class="mt-2 font-semibold">Star Sports2 Hindi</p>
 	</a>
 	    -->
+	<a href="astrocricket.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="astrocricket.jpg" alt="Astro Cricket" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Astro Cricket</p>
+	</a>
+
+	<a href="willowbycricbuzz.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="willowbycricbuzz.jpg" alt="Willow by Cricbuzz" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Willow by Cricbuzz</p>
+	</a>
+
+	<a href="skysportscricket.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="skysportscricket.jpg" alt="Sky Sports Cricket" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Sky Sports Cricket</p>
+	</a>
 
 	<a href="https://cricstream4u.github.io/tsports/" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="tsports.jpg" alt="T Sports" class="w-20 h-20 mx-auto">
