--- a/ipl.html
+++ b/ipl.html
@@ -25,7 +25,7 @@
 
     <!-- Header -->
     <header class="p-4 bg-blue-900 text-white text-center text-2xl font-bold">
-        <img src="cineheader.png" class="h-10 md:h-10 lg:h-10 mx-auto">
+        <a href="https://cinearena.live/"><img src="cineheader.png" class="h-10 md:h-10 lg:h-10 mx-auto"></a>
     </header>
 
     <!-- Search & Dark Mode Toggle -->
