--- a/movie2.html
+++ b/movie2.html
@@ -127,7 +127,7 @@
 
     <!-- Search & Dark Mode Toggle -->
     <div class="flex justify-center items-center p-4 gap-4">
-        <input type="search" id="search" placeholder="Search Channels..." 
+        <input type="search" id="search" placeholder="Search Movies..." 
                class="px-4 py-2 rounded border border-gray-400 text-black focus:outline-none focus:ring-2 focus:ring-blue-400">
         <button id="theme-toggle" class="px-4 py-2 bg-gray-100 text-black rounded border border-gray-400">🌙</button>
     </div>
