--- a/movie2.html
+++ b/movie2.html
@@ -16,6 +16,9 @@
             gap: 20px;
             padding: 20px;
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	      h4{
+		    color:black;
+	    }
         }
 
         .movie-card {
@@ -27,6 +30,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+	    h4{
+		    color:black;
+	    }
         }
 
         .movie-card img {
