--- a/movie2.html
+++ b/movie2.html
@@ -141,7 +141,16 @@
     <!-- Channel Grid -->
      <div class="movie-grid" id="movieGrid">
 
-
+	<div class="movie-card" data-title="Chhava 2025 Full Movie Original HD">
+              <a href="https://cricstream4u.github.io/latestmovie/chhava2025original">
+                <img src="https://image.tmdb.org/t/p/w500/7AeohlqamcLL1diMusV28eTngvg.jpg" alt="Chhava">
+                <h4>Chhava 2025 Full Movie Original HD</h4>
+              </a>
+              <a href="https://cricstream4u.github.io/latestmovie/chhava2025original">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+	</div>
+	     
 
 	<div class="movie-card" data-title="Kaafir (2025) Full Movie in Hindi">
               <a href="https://cinearena.github.io/Kaafir-2025/">
