--- a/movie2.html
+++ b/movie2.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="video, streaming, cine arena, cine-arena, sports">
     <meta name="description" content="Cine Arena live streaming - Watch Sports for free.">
     <title>CineArena.Live</title>
-    <link rel="icon" href="favicon1.png">
+    <link rel="icon" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .movie-grid {
