--- a/ipl.html
+++ b/ipl.html
@@ -43,7 +43,7 @@
             <p class="mt-2 font-semibold">Hindi</p>
         </a>
         
-        <a href="https://cricstream4u.github.io/ipl-english2/" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+        <a href="https://cricstream4u.github.io/tsports/" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="ipleng.jpg" alt="English" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">English</p>
         </a>
