--- a/movies.html
+++ b/movies.html
@@ -141,6 +141,16 @@
     <!-- Channel Grid -->
      <div class="movie-grid" id="movieGrid">
 
+	<div class="movie-card" data-title="Jaat 2025 Full Movie Original HD">
+              <a href="https://cricstream4u.github.io/latestmovie/jaat-2025-original">
+                <img src="https://image.tmdb.org/t/p/w500/7AeohlqamcLL1diMusV28eTngvg.jpg" alt="Chhava">
+                <h4>Jaat 2025 Full Movie Original HD</h4>
+              </a>
+              <a href="https://cricstream4u.github.io/latestmovie/jaat-2025-original">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+	</div>
+
 	<div class="movie-card" data-title="Chhava 2025 Full Movie Original HD">
               <a href="https://cricstream4u.github.io/latestmovie/chhava2025original">
                 <img src="https://image.tmdb.org/t/p/w500/7AeohlqamcLL1diMusV28eTngvg.jpg" alt="Chhava">
