--- a/movies.html
+++ b/movies.html
@@ -141,10 +141,20 @@
     <!-- Channel Grid -->
      <div class="movie-grid" id="movieGrid">
 
+	<div class="movie-card" data-title="Bad Boy Ugly (2025) Full Movie Original HD">
+              <a href="https://cricstream4u.github.io/latestmovie/bad-boy-ugly">
+                <img src="https://image.tmdb.org/t/p/w500/8DbYYluzdiGDAZzsaP7DWGbwfLd.jpg" alt="Chhava">
+                <h4>Bad Boy Ugly (2025) Full Movie Original HD</h4>
+              </a>
+              <a href="https://cricstream4u.github.io/latestmovie/bad-boy-ugly">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+	</div>
+
 	<div class="movie-card" data-title="Jaat 2025 Full Movie Original HD">
               <a href="https://cricstream4u.github.io/latestmovie/jaat-2025-original">
                 <img src="https://image.tmdb.org/t/p/w500/7AeohlqamcLL1diMusV28eTngvg.jpg" alt="Chhava">
-                <h4>Jaat 2025 Full Movie Original HD</h4>
+                <h4>Jaat (2025) Full Movie Original HD</h4>
               </a>
               <a href="https://cricstream4u.github.io/latestmovie/jaat-2025-original">
                 <button class="watch-btn">Watch Now</button>
