--- a/movies.html
+++ b/movies.html
@@ -153,7 +153,7 @@
 
 	<div class="movie-card" data-title="Jaat 2025 Full Movie Original HD">
               <a href="https://cricstream4u.github.io/latestmovie/jaat-2025-original">
-                <img src="https://image.tmdb.org/t/p/w500/7AeohlqamcLL1diMusV28eTngvg.jpg" alt="Chhava">
+                <img src="https://catimages.org/images/2025/04/10/Jaat-2025-Hindi-HDTC-Full-Movie-HDHub4u34b935bed492594b.jpg" alt="Chhava">
                 <h4>Jaat (2025) Full Movie Original HD</h4>
               </a>
               <a href="https://cricstream4u.github.io/latestmovie/jaat-2025-original">
