--- a/movies.html
+++ b/movies.html
@@ -108,6 +108,8 @@
             }
             .movie-grid {
                 grid-template-columns: repeat(5, 1fr);
+		margin-left:15%;
+		margin-right:15%;
             }
         }
 
