--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,8 @@
             align-items: center;
             gap: 20px;
             margin-top:10px;
+	    margin-left:10px;
+	    margin-right:10px;
             width: 100%;
             z-index: 10;
         }
