--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,8 @@
             align-items: center;
             gap: 20px;
             margin-top:10px;
-	    
+	    padding-left:10px;
+	    padding-right:10px;
             width: 100%;
             z-index: 10;
         }
