--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
             color: #fff;
             font-size: 18px;
             font-weight: bold;
-            padding: 10px 20px;
+            padding: 10px;
             border-radius: 8px;
             position: relative;
             overflow: hidden;
