--- a/index2.html
+++ b/index2.html
@@ -85,7 +85,7 @@
     </header>
   <!-- Menu Section -->
     <div class="menu">
-        <a href="https://cinearena.live">Channels</a>
+        <a href="https://cinearena.live">All</a>
 	<a href="https://cinearena.live/sports">Sports</a>
         <a href="https://cinearena.live/music">Music</a>
         <a href="https://cinearena.live/movies">Movies</a>
