--- a/ipl.html
+++ b/ipl.html
@@ -48,7 +48,7 @@
             <p class="mt-2 font-semibold">Hindi </p>
         </a>
         
-        <a href="https://cricstream4u.github.io/tsports-iframe" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+        <a href="https://cricstream4u.github.io/jwplyr?file=https://live.aoneroom.com/moviebox/wefeed05.m3u8?auth_key=1744615696-0-0-e15b10662e3a00ed562396542d1c89ef" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="ipleng.jpg" alt="English" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">English</p>
         </a>
@@ -75,7 +75,7 @@
             <img src="star2.jpg" alt="Star Sports2 Hindi" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Star Sports2 Hindi</p>
 	</a>
-	    -->
+
 	<a href="astrocricket.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="astrocricket.jpg" alt="Astro Cricket" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Astro Cricket</p>
@@ -85,8 +85,8 @@
             <img src="willowbycricbuzz.jpg" alt="Willow by Cricbuzz" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Willow by Cricbuzz</p>
 	</a>
-
-	<a href="skysportscricket.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+		-->
+	<a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/chunklist_w140556680.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="skysportscricket.jpg" alt="Sky Sports Cricket" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Sky Sports Cricket</p>
 	</a>
