--- a/ipl.html
+++ b/ipl.html
@@ -38,14 +38,14 @@
     <!-- Channel Grid -->
     <div id="channel-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 p-4">
 <!--
-        <a href="https://cricstream4u.github.io/ipl-hindi2/" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="iplhin.jpg" alt="Hindi" class="w-20 h-20 mx-auto">
-            <p class="mt-2 font-semibold">Hindi 1</p>
+        <a href="https://cinearena.live/ipl" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="ipl.jpg" alt="IPL 2025" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">IPL 2025</p>
 	</a>
 	    -->
-        <a href="https://cricstream4u.github.io/ipl-iframe/" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="iplhin.jpg" alt="Hindi" class="w-20 h-20 mx-auto">
-            <p class="mt-2 font-semibold">Hindi </p>
+        <a href="https://cinearena.live/psl" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="psl1.jpg" alt="PSL 2025" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">PSL 2025 </p>
         </a>
         
         <a href="https://cricstream4u.github.io/jwplyr?file=https://live.aoneroom.com/moviebox/wefeed05.m3u8?auth_key=1744615696-0-0-e15b10662e3a00ed562396542d1c89ef" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
