--- a/index2.html
+++ b/index2.html
@@ -204,7 +204,7 @@
             <p class="mt-2 font-semibold">Joo Music</p>
 	</a>
         
-        <a href="" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+        <a href="https://cricstream4u.github.io/jwplyr/?file=https://d35j504z0x2vu2.cloudfront.net/v1/manifest/0bc8e8376bd8417a1b6761138aa41c26c7309312/bollywood-hd/43e99595-3ab3-4f82-a828-0d32dc308c98/0.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="bollywoodhd.jpg" alt="Bollywood HD" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Bollywood HD</p>
 	</a>
