--- a/index2.html
+++ b/index2.html
@@ -213,6 +213,11 @@
             <img src="bhpcinema.jpg" alt="Bhojpuri Cinema" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Bhojpuri Cinema</p>
 	</a>
+
+	<a href="https://cricstream4u.github.io/jwplyr/?file=https://amg01448-samsungin-enterr10bangla-samsungin-ad-gg.amagi.tv/playlist/amg01448-samsungin-enterr10bangla-samsungin/playlist.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="Enter10bangla.jpg" alt="Enterr10 Bangla" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Enterr10 Bangla</p>
+	</a>
         
     </div>
 
