--- a/ipl.html
+++ b/ipl.html
@@ -51,8 +51,8 @@
         
         
         <a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/chunklist_w140556680.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
-            <img src="skysports.jpg" alt="Sky Sports" class="w-20 h-20 mx-auto">
-            <p class="mt-2 font-semibold">Sky Sports</p>
+            <img src="skysportscricket.jpg" alt="Sky Sports" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Sky Sports Cricket</p>
         </a>
 
 	<a href="tsports.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
