--- a/index2.html
+++ b/index2.html
@@ -209,7 +209,7 @@
             <p class="mt-2 font-semibold">Bollywood HD</p>
 	</a>
 
-	<a href="" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="https://cricstream4u.github.io/jwplyr/?file=https://live-bhojpuri.akamaized.net/liveabr/playlist.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="bhpcinema.jpg" alt="Bhojpuri Cinema" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Bhojpuri Cinema</p>
 	</a>
