--- a/live-sports.html
+++ b/live-sports.html
@@ -1,9 +1,8 @@
-<meta name="174c5c7a24dac851c2ca66c46e0970ab4ebfffe5" content="174c5c7a24dac851c2ca66c46e0970ab4ebfffe5" />
-<meta name="monetag" content="fd70a6997b8f3a8dea5859c93425735a">
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+ <tittle>CineArena.live</tittle>
 <style>
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif; margin: 0; padding: 0;}
@@ -99,7 +98,7 @@ img {vertical-align: middle; width: 100%; height: auto;}
   <!-- Slide 2 (TATA IPL 2025) -->
   <div class="mySlides fade">
     <div class="numbertext"></div>
-    <img src="ipl.jpg" alt="Slide 1">
+    <img src="iplslider.jpg" alt="Slide 1">
     <div class="button-container">
       <a href=""https://cinearena.live/ipl" class="watch-button">Watch Now</a>
     </div>
@@ -108,7 +107,7 @@ img {vertical-align: middle; width: 100%; height: auto;}
   <!-- Slide 1 (HBL PSL 10 2025) -->
   <div class="mySlides fade">
     <div class="numbertext"></div>
-    <img src="psl1.jpg" alt="Slide 2">
+    <img src="pslslider.jpg" alt="Slide 2">
     <div class="button-container">
       <a href=""https://cinearena.live/psl" class="watch-button">Watch Now</a>
     </div>
