--- a/live-sports.html
+++ b/live-sports.html
@@ -129,7 +129,7 @@ img {vertical-align: middle; width: 100%; height: auto;}
 <div class="dot-container">
   <span class="dot"></span> 
   <span class="dot"></span> 
-  <span class="dot"></span> <!-- New dot for Slide 3 -->
+<!--  <span class="dot"></span>  New dot for Slide 3 -->
 </div>
  
 <script>
