--- a/live-events.html
+++ b/live-events.html
@@ -17,7 +17,7 @@
 	  max-width: 1000px;
 	  position: relative;
 	  margin: auto;
-	  border: 2px solid black;
+	  border: 2px solid gray-400;
 	}
 	 
 	/* Caption text */
