--- a/live-events.html
+++ b/live-events.html
@@ -17,7 +17,8 @@
 	  max-width: 1000px;
 	  position: relative;
 	  margin: auto;
-	  border: 2px solid gray-400;
+	  border: 1px solid #9CA3AF;
+	  border-radius: 0.25rem;
 	}
 	 
 	/* Caption text */
