--- a/live-events.html
+++ b/live-events.html
@@ -125,8 +125,8 @@
 
   <!-- Slide 2 (TATA IPL 2025) -->
   <div class="mySlides fade">
-    <div class="numbertext"></div>
-    <img src="iplslider.jpg" alt="Slide 1">
+    <div class="numbertext">1</div>
+    <img src="iplslider.jpg" alt="IPL" style="border-radius: 0.25rem;">
     <div class="button-container">
       <a href=""https://cinearena.live/ipl" class="watch-button">Watch Now</a>
     </div>
@@ -134,8 +134,8 @@
  
   <!-- Slide 1 (HBL PSL 10 2025) -->
   <div class="mySlides fade">
-    <div class="numbertext"></div>
-    <img src="pslslider.jpg" alt="Slide 2">
+    <div class="numbertext">2</div>
+    <img src="pslslider.jpg" alt="PSL" style="border-radius: 0.25rem;">
     <div class="button-container">
       <a href=""https://cinearena.live/psl" class="watch-button">Watch Now</a>
     </div>
@@ -143,7 +143,7 @@
  
   <!-- Slide 3 (New Slide)
   <div class="mySlides fade">
-    <div class="numbertext"></div>
+    <div class="numbertext">2</div>
     <img src="https://cdn.shopify.com/s/files/1/0684/1643/8455/files/images_8.jpg?v=1743972237" alt="Slide 3">
     <div class="button-container">
       <a href="https://cinearena.live/psl" class="watch-button">Watch Now</a>
