--- a/live-events.html
+++ b/live-events.html
@@ -34,7 +34,7 @@
 	 
 	/* Number text */
 	.numbertext {
-	  color: #ffffff;
+	  color: #FF0000;
 	  font-size: 14px;
 	  padding: 8px 12px;
 	  position: absolute;
