--- a/live-events.html
+++ b/live-events.html
@@ -125,7 +125,7 @@
 
   <!-- Slide 2 (TATA IPL 2025) -->
   <div class="mySlides fade">
-    <div class="numbertext">1</div>
+    <div class="numbertext">IPL LIVE</div>
     <img src="iplslider.jpg" alt="IPL" style="border-radius: 0.25rem;">
     <div class="button-container">
       <a href=""https://cinearena.live/ipl" class="watch-button">Watch Now</a>
@@ -134,7 +134,7 @@
  
   <!-- Slide 1 (HBL PSL 10 2025) -->
   <div class="mySlides fade">
-    <div class="numbertext">2</div>
+    <div class="numbertext">PSL LIVE</div>
     <img src="pslslider.jpg" alt="PSL" style="border-radius: 0.25rem;">
     <div class="button-container">
       <a href=""https://cinearena.live/psl" class="watch-button">Watch Now</a>
