--- a/live-events.html
+++ b/live-events.html
@@ -35,6 +35,7 @@
 	/* Number text */
 	.numbertext {
 	  color: #FF0000;
+	  background-color: #0F172A;
 	  font-size: 20px;
 	  padding: 8px 12px;
 	  position: absolute;
