--- a/live-events.html
+++ b/live-events.html
@@ -36,10 +36,12 @@
 	.numbertext {
 	  color: #FF0000;
 	  background-color: #0F172A;
-	  font-size: 20px;
+	  border-radius: 0.25rem;
+	  font-size: 14px;
 	  padding: 8px 12px;
 	  position: absolute;
-	  top: 0;
+	  top: 5px;
+	  left: 5px;
 	}
 	 
 	/* Dots */
