--- a/live-events.html
+++ b/live-events.html
@@ -131,7 +131,7 @@
     <div class="numbertext">IPL LIVE</div>
     <img src="iplslider.jpg" alt="IPL" style="border-radius: 0.25rem;">
     <div class="button-container">
-      <a href=""https://cinearena.live/ipl" class="watch-button">Watch Now</a>
+      <a href="https://cinearena.live/ipl" class="watch-button">Watch Now</a>
     </div>
   </div>
  
@@ -140,7 +140,7 @@
     <div class="numbertext">PSL LIVE</div>
     <img src="pslslider.jpg" alt="PSL" style="border-radius: 0.25rem;">
     <div class="button-container">
-      <a href=""https://cinearena.live/psl" class="watch-button">Watch Now</a>
+      <a href="https://cinearena.live/psl" class="watch-button">Watch Now</a>
     </div>
   </div>
  
