--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
             <p class="mt-2 font-semibold">TEN CRICKET</p>
 	</a>
 
-	<a href="tnt1.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="https://cricstream4u.github.io/jwmpd/?https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/wf8usag51e/out/v1/bd3b0c314fff4bb1ab4693358f3cd2d3/cenc.mpd?|drmScheme=clearkey&drmLicense=ae26845bd33038a9c0774a0981007294:63ac662dde310cfb4cc6f9b43b34196d" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="tnt1.jpg" alt="TNt 1" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">TNT Sports 1</p>
 	</a>
 
-	<a href="tnt2.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="https://cricstream4u.github.io/jwmpd/?https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/f0qvkrra8j/out/v1/f8fa17f087564f51aa4d5c700be43ec4/cenc.mpd?|drmScheme=clearkey&drmLicense=6d1708b185c6c4d7b37600520c7cc93c:1aace05f58d8edef9697fd52cb09f441" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="tnt2.jpg" alt="TNT 2" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">TNT Sports 2</p>
 	</a>
 
-	<a href="tnt3.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="https://cricstream4u.github.io/jwmpd?https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/lsdasbvglv/out/v1/bb548a3626cd4708afbb94a58d71dce9/cenc.mpd?|drmScheme=clearkey&drmLicense=4e993aa8c1f295f8b94e8e9e6f6d0bfe:86a1ed6e96caab8eb1009fe530d2cf4f" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="tnt3.jpg" alt="TNT 3" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">TNT Sports 3</p>
 	</a>
