--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- Menu Section -->
     <div class="menu">
         <a href="https://cinearena.live">Channels</a>
-	<a href="https://cinearena.live/sports">Sports</a>
+	<a href="https://cinearena.live/cricket">Cricket</a>
         <a href="https://cinearena.live/music">Music</a>
         <a href="https://cinearena.live/movies">Movies</a>
        
