--- a/ipl.html
+++ b/ipl.html
@@ -48,7 +48,16 @@
             <img src="ipleng.jpg" alt="English" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">English</p>
         </a>
-        
+
+	<a href="https://cinearena.live/astrocricket" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="astrocricket.jpg" alt="Astro Cricket" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Astro Cricket</p>
+	</a>
+
+	<a href="https://cinearena.live/willowbycricbuzz" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="willowbycricbuzz.jpg" alt="Willow by Cricbuzz" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Willow by Cricbuzz</p>
+	</a>
         
         <a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/chunklist_w140556680.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="skysportscricket.jpg" alt="Sky Sports" class="w-20 h-20 mx-auto">
