--- a/ipl.html
+++ b/ipl.html
@@ -64,7 +64,7 @@
             <p class="mt-2 font-semibold">Sky Sports Cricket</p>
         </a>
 
-	<a href="tsports.html" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+	<a href="https://cricstream4u.github.io/tsports" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="tsports.jpg" alt="T Sports" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">T Sports</p>
 	</a>
