--- a/ipl.html
+++ b/ipl.html
@@ -66,7 +66,7 @@
             <p class="mt-2 font-semibold">Willow by Cricbuzz</p>
 	</a>
         
-        <a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/chunklist_w140556680.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+        <a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/playlist.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="skysportscricket.jpg" alt="Sky Sports" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Sky Sports Cricket</p>
         </a>
