--- a/ipl.html
+++ b/ipl.html
@@ -51,7 +51,7 @@
             <p class="mt-2 font-semibold">Hindi 2</p>
         </a>
         
-        <a href="https://cricstream4u.github.io/jwplyr?file=https://live.aoneroom.com/moviebox/wefeed05.m3u8?auth_key=1744615696-0-0-e15b10662e3a00ed562396542d1c89ef" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+        <a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/playlist.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="ipleng.jpg" alt="English" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">English</p>
         </a>
