--- a/movies.html
+++ b/movies.html
@@ -143,6 +143,16 @@
     <!-- Channel Grid -->
      <div class="movie-grid" id="movieGrid">
 
+	<div class="movie-card" data-title="Empuraan (2025) Multi language">
+              <a href="https://cricstream4u.github.io/latestmovie/L2:Empuraan-(2025)-Multi-language">
+                <img src="https://image.tmdb.org/t/p/w500/rArCWk29zrzOMyItB6AuGWro6DJ.jpg" alt="L2: Empuraan">
+                <h4>L2:Empuraan (2025) Multi language</h4>
+              </a>
+              <a href="https://cricstream4u.github.io/latestmovie/L2:Empuraan -(2025)-Multi-language">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+	</div>
+
 	<div class="movie-card" data-title="Bad Boy Ugly (2025) Full Movie Original HD">
               <a href="https://cricstream4u.github.io/latestmovie/bad-boy-ugly">
                 <img src="https://image.tmdb.org/t/p/w500/8DbYYluzdiGDAZzsaP7DWGbwfLd.jpg" alt="Chhava">
