--- a/movies2.html
+++ b/movies2.html
@@ -119,6 +119,17 @@
     <!-- Example below kept short for clarity -->
     
     <!-- Repeat this block for all movies -->
+
+    <div class="movie-card" data-title="Empuraan (2025) Multi language">
+      <a href="https://cricstream4u.github.io/latestmovie/tu-jhoothi-main-makkar">
+        <img src="https://catimages.org/images/2023/05/03/Tu-Jhoothi-Main-Makkaar-2023-Hindi-Dubbed-HDRip-Full-Movie-HDHub4u.jpg" alt="Empuraan" />
+        <h4>Tu Jhoothi Main Makkar Full Movie HD</h4>
+      </a>
+      <a href="https://cricstream4u.github.io/latestmovie/tu-jhoothi-main-makkar">
+        <button class="watch-btn">Watch Now</button>
+      </a>
+    </div>
+	  
     <div class="movie-card" data-title="Empuraan (2025) Multi language">
       <a href="https://cricstream4u.github.io/latestmovie/L2:Empuraan-(2025)-Multi-language">
         <img src="https://image.tmdb.org/t/p/w500/rArCWk29zrzOMyItB6AuGWro6DJ.jpg" alt="Empuraan" />
