--- a/movies.html
+++ b/movies.html
@@ -12,6 +12,7 @@
   <style>
     .movie-grid {
       margin-top: 0px;
+      color:black;
       display: grid;
       gap: 20px;
       padding: 20px;
