--- a/movies.html
+++ b/movies.html
@@ -121,6 +121,16 @@
     
     <!-- Repeat this block for all movies -->
 
+    <div class="movie-card" data-title="Kesari: Chapter-2 Full Movie HD">
+      <a href="https://cricstream4u.github.io/latestmovie/kesari:chapter-2">
+        <img src="https://image.tmdb.org/t/p/w342/jgGSqe1YgSot6Y1zDVTVkbsZ46z.jpg" alt="Kesari: Chapter-2 Full Movie HD" />
+        <h4>Kesari: Chapter-2 Full Movie HD</h4>
+      </a>
+      <a href="https://cricstream4u.github.io/latestmovie/kesari:chapter-2">
+        <button class="watch-btn">Watch Now</button>
+      </a>
+    </div>
+
     <div class="movie-card" data-title="Tu Jhoothi Main Makkar Full Movie HD">
       <a href="https://cricstream4u.github.io/latestmovie/tu-jhoothi-main-makkar">
         <img src="https://catimages.org/images/2023/05/03/Tu-Jhoothi-Main-Makkaar-2023-Hindi-Dubbed-HDRip-Full-Movie-HDHub4u.jpg" alt="Tu Jhoothi Main Makkar Full Movie HD" />
