--- a/movies.html
+++ b/movies.html
@@ -131,6 +131,16 @@
       </a>
     </div>
 
+    <div class="movie-card" data-title="Kesari: Chapter-1 (2019) Full Movie HD">
+      <a href="https://cricstream4u.github.io/latestmovie/kesari:chapter-1">
+        <img src="https://image.tmdb.org/t/p/w342/ctjT1pMNAGD9ou0kuhz806tf7kX.jpg" alt="Kesari: Chapter-1 (2019) Full Movie HD" />
+        <h4>Kesari: Chapter-1 (2019) Full Movie HD</h4>
+      </a>
+      <a href="https://cricstream4u.github.io/latestmovie/kesari:chapter-1">
+        <button class="watch-btn">Watch Now</button>
+      </a>
+    </div>
+
     <div class="movie-card" data-title="Tu Jhoothi Main Makkar Full Movie HD">
       <a href="https://cricstream4u.github.io/latestmovie/tu-jhoothi-main-makkar">
         <img src="https://catimages.org/images/2023/05/03/Tu-Jhoothi-Main-Makkaar-2023-Hindi-Dubbed-HDRip-Full-Movie-HDHub4u.jpg" alt="Tu Jhoothi Main Makkar Full Movie HD" />
