--- a/movies.html
+++ b/movies.html
@@ -121,6 +121,16 @@
     
     <!-- Repeat this block for all movies -->
 
+   <div class="movie-card" data-title="Sikandar (2025) Full Movie 1080p">
+              <a href="https://cinearena.github.io/sikandar">
+                <img src="https://image.tmdb.org/t/p/w342/41s42CRXafa3OuRGvCtfYPEBmse.jpg" alt="Sikandar">
+                <h4>Sikandar (2025) Full Movie Original HD</h4>
+              </a>
+              <a href="https://cinearena.github.io/sikandar">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+   </div>
+
     <div class="movie-card" data-title="Kesari: Chapter-2 Full Movie HD">
       <a href="https://cricstream4u.github.io/latestmovie/kesari:chapter-2">
         <img src="https://image.tmdb.org/t/p/w342/jgGSqe1YgSot6Y1zDVTVkbsZ46z.jpg" alt="Kesari: Chapter-2 Full Movie HD" />
@@ -287,7 +297,7 @@
 	  <div class="movie-card" data-title="Sikandar (2025) Full Movie 1080p">
               <a href="https://cinearena.github.io/Sikandar-DVD-HQ/">
                 <img src="https://image.tmdb.org/t/p/w342/41s42CRXafa3OuRGvCtfYPEBmse.jpg" alt="Movie 1">
-                <h4>Sikandar (2025) Full Movie 1080p</h4>
+                <h4>Sikandar (2025) Full Movie PreDVD</h4>
               </a>
               <a href="https://cinearena.github.io/Sikandar-DVD-HQ/">
                 <button class="watch-btn">Watch Now</button>
