--- a/movies.html
+++ b/movies.html
@@ -122,11 +122,11 @@
     <!-- Repeat this block for all movies -->
 
    <div class="movie-card" data-title="Sikandar (2025) Full Movie 1080p">
-              <a href="https://cinearena.github.io/sikandar">
+              <a href="https://cricstream4u.github.io/latestmovie/sikandar">
                 <img src="https://image.tmdb.org/t/p/w342/41s42CRXafa3OuRGvCtfYPEBmse.jpg" alt="Sikandar">
                 <h4>Sikandar (2025) Full Movie Original HD</h4>
               </a>
-              <a href="https://cinearena.github.io/sikandar">
+              <a href="https://cricstream4u.github.io/latestmovie/sikandar">
                 <button class="watch-btn">Watch Now</button>
               </a>
    </div>
