--- a/movies.html
+++ b/movies.html
@@ -141,6 +141,16 @@
       </a>
     </div>
 
+   <div class="movie-card" data-title="Mere Husband Ki Biwi Full Movie in Hindi">
+      <a href="https://cricstream4u.github.io/latestmovie/Mere-Husband-Ki-Biwi">
+        <img src="https://image.tmdb.org/t/p/w500/fQMBYG4JOD6WN8QzViPYqxuIsru.jpg" alt="Mere Husband Ki Biwi Full Movie in Hindi" />
+        <h4>Mere Husband Ki Biwi Full Movie in Hindi</h4>
+      </a>
+      <a href="https://cricstream4u.github.io/latestmovie/Mere-Husband-Ki-Biwi">
+        <button class="watch-btn">Watch Now</button>
+      </a>
+   </div>
+
     <div class="movie-card" data-title="Kesari: Chapter-1 (2019) Full Movie HD">
       <a href="https://cricstream4u.github.io/latestmovie/kesari:chapter-1">
         <img src="https://image.tmdb.org/t/p/w342/ctjT1pMNAGD9ou0kuhz806tf7kX.jpg" alt="Kesari: Chapter-1 (2019) Full Movie HD" />
