--- a/ipl.html
+++ b/ipl.html
@@ -56,6 +56,12 @@
             <p class="mt-2 font-semibold">English</p>
         </a>
 
+	<a href="https://cricstream4u.github.io/ipl-hindi1" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+            <img src="star2.jpg" alt="StarSports1Hindi" class="w-20 h-20 mx-auto">
+            <p class="mt-2 font-semibold">Star Sports2 Hindi</p>
+	</a>
+	    
+
 	<a href="https://cricstream4u.github.io/ipl-hindi2" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="star1hd.jpg" alt="StarSports1Hindi" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">Star Sports1 Hindi</p>
