--- a/ipl.html
+++ b/ipl.html
@@ -51,7 +51,7 @@
             <p class="mt-2 font-semibold">Hindi 2</p>
         </a>
         
-        <a href="https://cricstream4u.github.io/jwplyr?file=https://wowza1.leisertv.com/live/skysportscrickethd.stream/playlist.m3u8" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
+        <a href="https://cricstream4u.github.io/jwmpd/?https://ABGQJFUAAAAAAAAMMXANBEEZ3B24U.bed3ea7a98654b03ba5dae84f31b3b41.emt.cf.ww.aiv-cdn.net/pdx-nitro/live/clients/dash/enc/xli8lfop8h/out/v1/bc39a1fb1df5478ea60cfd6c69af2c43/cenc.mpd?|drmScheme=clearkey&drmLicense=6e3fb7256b2ef0f277da98d880257230:3cf28e133be3ee653e5cf60dba609e09" class="channel-card block p-4 border border-gray-200 rounded shadow text-center transition-all">
             <img src="ipleng.jpg" alt="English" class="w-20 h-20 mx-auto">
             <p class="mt-2 font-semibold">English</p>
         </a>
