--- a/movies.html
+++ b/movies.html
@@ -121,6 +121,16 @@
     
     <!-- Repeat this block for all movies -->
 
+   <div class="movie-card" data-title="Dragon 2025 Full Movie in Hindi">
+              <a href="https://cricstream4u.github.io/latestmovie/dragon">
+                <img src="https://image.tmdb.org/t/p/w500/3BR3YTR04dO9ztCx8LZx2C2eu4G.jpg" alt="Dragon">
+                <h4>Dragon 2025 Full Movie in Hindi</h4>
+              </a>
+              <a href="https://cricstream4u.github.io/latestmovie/dragon">
+                <button class="watch-btn">Watch Now</button>
+              </a>
+   </div>
+
    <div class="movie-card" data-title="Sikandar (2025) Full Movie 1080p">
               <a href="https://cricstream4u.github.io/latestmovie/sikandar">
                 <img src="https://image.tmdb.org/t/p/w342/41s42CRXafa3OuRGvCtfYPEBmse.jpg" alt="Sikandar">
